write cqs transition block to queue